Added surprise on critical miss
Fixed multi-monster attacking
