@@ -18,13 +18,14 @@ static dr1ClassType class_mu = {
     "d4",
     "3d4*10",
     INTELLIGENCE,
-    /* min_str */ 3,
-    /* min_int */ 9,
-    /* min_wis */ 6,
-    /* min_dex */ 6,
-    /* min_con */ 6,
-    /* min_cha */ 6,
-
+    /* minimum */ {
+	/* _str */ 3,
+	/* _int */ 9,
+	/* _wis */ 6,
+	/* _dex */ 6,
+	/* _con */ 6,
+	/* _cha */ 6
+    },
     21,
     5
 };
@@ -34,12 +35,14 @@ static dr1ClassType class_thief = {
     "d6",
     "3d6*10",
     DEXTERITY,
-    /* min_str */ 6,
-    /* min_int */ 6,
-    /* min_wis */ 3,
-    /* min_dex */ 9,
-    /* min_con */ 6,
-    /* min_cha */ 6,
+    /* minimum */ {
+	/* _str */ 6,
+	/* _int */ 6,
+	/* _wis */ 3,
+	/* _dex */ 9,
+	/* _con */ 6,
+	/* _cha */ 6
+    },
     21,
     4
 };
@@ -49,12 +52,14 @@ static dr1ClassType class_cleric = {
     "d8",
     "3d8*10",
     WISDOM,
-    /* min_str */ 6,
-    /* min_int */ 6,
-    /* min_wis */ 9,
-    /* min_dex */ 3,
-    /* min_con */ 6,
-    /* min_cha */ 6,
+    /* minimum */ {
+	/* _str */ 6,
+	/* _int */ 6,
+	/* _wis */ 9,
+	/* _dex */ 3,
+	/* _con */ 6,
+	/* _cha */ 6
+    },
     20,
     3
 };
@@ -64,12 +69,14 @@ static dr1ClassType class_fighter = {
     "d10",
     "3d10*10",
     STRENGTH,
-    /* min_str */ 9,
-    /* min_int */ 3,
-    /* min_wis */ 6,
-    /* min_dex */ 6,
-    /* min_con */ 6,
-    /* min_cha */ 6,
+    /* minimum */ {
+	/* _str */ 9,
+	/* _int */ 3,
+	/* _wis */ 6,
+	/* _dex */ 6,
+	/* _con */ 6,
+	/* _cha */ 6
+    },
     20,
     2
 };
