@@ -1,0 +1,54 @@
+#ifndef __DR1__H
+#define __DR1__H
+
+#ifndef _RPC_XDR_H
+#   include <rpc/xdr.h>
+#endif
+#include <math.h>
+
+/*-------------------------------------------------------------------
+ * dr1Location
+ *
+ *    The structure ...
+ */
+
+typedef struct {
+    int x;
+    int y;
+} dr1Location;
+
+
+/*-------------------------------------------------------------------
+ * dr1Location_distance
+ *
+ *    The method calculates the distance between two locations.
+ *
+ *  PARAMETERS:
+ *    l1, l2   The two locations
+ *
+ *  RETURNS:
+ *    The distance between them rounded to the nearest int.
+ *
+ *  SIDE EFFECTS:
+ */
+
+int dr1Location_distance( dr1Location *l1, dr1Location *l2);
+
+/*-------------------------------------------------------------------
+ * dr1Location_moveTo
+ *
+ *    The method calculates the distance between two locations.
+ *
+ *  PARAMETERS:
+ *    _from, _to   Where to move from and to
+ *    dist	   Distance to traverse
+ *
+ *  RETURNS:
+ *    A new Location 10 feet in the direction of _to.
+ *
+ *  SIDE EFFECTS:
+ */
+
+dr1Location dr1Location_moveTo( dr1Location *_from, dr1Location *_to, int dist);
+
+#endif /* __DR1__H */
